# ReactOS

./: CMakeLists.txt
base/applications/wordpad/: wordpad.c
base/setup/reactos/: reactos.c
base/setup/usetup/: usetup.c
base/shell/explorer/: explorer.cpp
boot/freeldr/freeldr/: CMakeLists.txt
dll/ntdll/def/: ntdll.spec
dll/ntdll/ldr/: ldrinit.c  ldrutils.c  verifier.c
dll/win32/atl/: CMakeLists.txt
dll/win32/comctl32/: CMakeLists.txt
dll/win32/dbghelp/: CMakeLists.txt
dll/win32/shell32/: CDefView.cpp  CDefaultContextMenu.cpp  shfldr.h  shlexec.cpp  shlfolder.cpp  shresdef.h  utils.cpp
dll/win32/shlwapi/: ordinal.c
dll/win32/ucrtbase/: CMakeLists.txt  stubs.c  ucrtbase.spec
dll/win32/uxtheme/: draw.c
drivers/network/netio/: netio.c  netio.spec
drivers/storage/scsiport/: scsiport.c
hal/halx86/: CMakeLists.txt
hal/halx86/generic/: halinit.c  x86bios.c
media/doc/: WINESYNC.txt
modules/rostests/winetests/ucrtbase/: CMakeLists.txt
ntoskrnl/: ntos.cmake
ntoskrnl/config/: cmboot.c
ntoskrnl/ex/: init.c
ntoskrnl/include/internal/: ke.h
ntoskrnl/io/iomgr/: deviface.c  driver.c  iomgr.c
ntoskrnl/ke/: krnlinit.c
ntoskrnl/ke/amd64/: krnlinit.c
ntoskrnl/ke/i386/: mproc.c  traphdlr.c
ntoskrnl/mm/ARM3/: sysldr.c
ntoskrnl/ps/: apphelp.c
ntoskrnl/rtl/: misc.c
sdk/cmake/: CMakeMacros.cmake  config.cmake  gcc.cmake  host-tools.cmake  msvc.cmake
sdk/include/crt/: math.h
sdk/include/ndk/: rtltypes.h
sdk/include/psdk/: uxtheme.h
sdk/include/reactos/: shellutils.h  shlobj_undoc.h
sdk/include/ucrt/: corecrt.h
sdk/include/xdk/: winnt_old.h
sdk/lib/crt/: oldnames-common.S  oldnames-ucrtbase.S  oldnames.cmake  ucrtsupport.cmake
sdk/lib/rtl/: critical.c  heappage.c
sdk/lib/ucrt/: CMakeLists.txt
sdk/lib/vcruntime/: CMakeLists.txt  __acrt_initialize_stub.cpp
win32ss/include/: ntuser.h
win32ss/user/ntuser/: focus.c  main.c  (+3 more)
(+97 files in other folders)
